In order to fix the bug in Firefox (https://bugzilla.mozilla.org/show_bug.cgi?id=1953102), add CSS statements to have the scrollbar

--- a/core-war/src/main/webapp/util/styleSheets/silverpeas-main.css
+++ b/core-war/src/main/webapp/util/styleSheets/silverpeas-main.css
@@ -7753,3 +7753,11 @@ input.dateToPick,
 #identity-extra label .sensitive_no_active {
   margin: -1em 0 0 -0.25em;
 }
+
+/*********** For ConverseJS as a workaround of a Firefox bug */
+@-moz-document url-prefix(){
+  .conversejs .chatbox .chat-content .chat-content__messages {
+    overflow-x: auto;
+    display: block;
+  }
+}
